--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "2amigos/yii2-ckeditor-widget": "~1.0",
         "kartik-v/yii2-widget-fileinput": "@dev",
         "drsdre/yii2-wizardwidget": "*",
-        "kartik-v/yii2-widget-depdrop": "@dev"
+        "kartik-v/yii2-widget-depdrop": "@dev",
+        "kartik-v/yii2-widget-typeahead": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
